# footy

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Justfile  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: FRONTEND_BRIEF.md
migrations/: env.py
migrations/versions/: 39d332fe9c4d_add_teams_matches_scorers.py  4ba8194045c7_competition_code_nullable_drop_unique.py  8204e9e24f4d_initial_schema.py  e42cdcc6b601_fdo_schema_teams_matches_with_fdo_ids_.py
scripts/: screenshot.py
src/footy/: __init__.py  api.py  config.py  db.py  fdo.py  models.py  parser.py  sync.py  wiki.py
src/footy/templates/: base.html  index.html  league.html  match.html  match_detail.html  premier_league.html
src/footy/templates/partials/: competitions_grid.html
tests/: conftest.py  test_api.py  test_parser.py
