[project]
name = "footy"
version = "0.1.0"
description = "Football analytics pet project — DevOps learning playground"
readme = "README.md"
authors = [
    { name = "BitByte", email = "bitbyte@server" }
]
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "psycopg[binary]>=3.1",
    "pydantic-settings>=2.14.1",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.46.0",
]

[project.scripts]
footy = "footy:main"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "pytest>=8.0",
    "pre-commit>=3.7",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "B",   # flake8-bugbear (common bugs)
    "UP",  # pyupgrade (modern Python syntax)
    "SIM", # flake8-simplify
]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
